tests/snapshot/error/source_locations/expression/yield_star/throw_get_method_throws.exp
Error: get throw
  ┌ source_locations/expression/yield_star/throw_get_method_throws.js:8:15
  |
8 |         throw new Error('get throw');
  |               ^
Stack trace:
  at get throw (source_locations/expression/yield_star/throw_get_method_throws.js:8:15)
  at generator (source_locations/expression/yield_star/throw_get_method_throws.js:15:3)
  at throw (<native>)
  at <global> (source_locations/expression/yield_star/throw_get_method_throws.js:20:1)